--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,12 @@
+@font-face {
+  font-family: notOK;
+  src: url(fonts/dpcomic.ttf);
+}
+
 .App {
   text-align: center;
+  font-family: notOK;
+  font-size: 31px;
 }
 
 .App-logo {
@@ -20,7 +27,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
 }
 
