--- a/src/base.css
+++ b/src/base.css
@@ -21,3 +21,13 @@ h1, h2 {
   font-weight: 100;
   text-shadow: 2px 2px 2px rgba(255, 255, 255, .5);
 }
+
+:not(input):not(textarea),
+:not(input):not(textarea)::after,
+:not(input):not(textarea)::before {
+  -webkit-user-select: none;
+  user-select: none;
+}
+input, button, textarea, :focus {
+  outline: none;
+}
