--- a/src/base.css
+++ b/src/base.css
@@ -17,8 +17,11 @@ body {
   overflow: hidden;
 }
 
-h1, h2 {
+h1, h2, h3 {
   font-weight: 100;
+}
+
+h1.title {
   text-shadow: 2px 2px 2px rgba(255, 255, 255, .5);
 }
 
